[c] fix weird text wrapping with debug mode

--- a/src/styles/socials.scss
+++ b/src/styles/socials.scss
@@ -198,6 +198,7 @@
 
 			p, pre {
 				margin: 0;
+				text-wrap: nowrap;
 			}
 		}
 	}
